# trash_collection_robot

./: CMakeLists.txt  README.md  package.xml
Docker/: Dockerfile
include/trash_collection_robot/: arm_controller.hpp  laser_scan_processor.hpp  math.hpp  rx200_arm_edge_generator.hpp  sensor_joint_state_manager.hpp  targets_queue.hpp
include/trash_collection_robot/pose_managers/: geometry_pose_stamped_manager.hpp  nav_odometry_manager.hpp  pose_manager.hpp  static_pose_manager.hpp
launch/: robot_state_publisher.launch  run_hardware.launch  spin_up_bot.launch
rviz/: Proj2.rviz
src/: arm_controller.cpp  color_detect.cpp  controller_node.cpp  laser_scan_processor.cpp  main.cpp
urdf/: turtlebot3_waffle_pi_rx200.urdf
